feat: add Agent API HTTP server and integrate with unified server
Introduce SimpleHttpServer; wire into UnifiedKolosalServer with config and lifecycle; add build wiring and improved logs; fix cross-platform socket issues and header/impl naming; update VS Code associations and submodule pointer.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "codecvt": "cpp",
         "xlocale": "cpp",
         "future": "cpp",
-        "system_error": "cpp"
+        "system_error": "cpp",
+        "valarray": "cpp"
     }
 }
