feat: Add Model Context Protocol (MCP) integration and enhance build system
Major Features:
- Add comprehensive MCP protocol support for agent interoperability
- Implement MCPAgentAdapter for exposing agents as MCP servers/clients
- Add MCPServerIntegration for system-wide MCP management
- Enable cross-agent communication via MCP protocol

Build System Improvements:
- Add CMake 4.0 compatibility with policy configuration
- Add MCP_PROTOCOL_ENABLED build option (ON by default)
- Enhance library linking with MCP-CPP integration
- Improve multi-configuration support (Debug/Release/RelWithDebInfo/MinSizeRel)
- Add external mcp-cpp submodule integration

Agent System Enhancements:
- Add MCP adapter methods to AgentService class
- Implement auto-setup and management of MCP for all agents
- Add MCP integration to UnifiedServer with configuration options
- Enable agent function exposure as MCP tools
- Support agent memory exposure as MCP resources

Configuration & Documentation:
- Remove automatic config file generation (now requires explicit config)
- Add comprehensive MCP integration documentation
- Update README with MCP protocol features
- Add example implementation for MCP integration
- Improve error messaging and user guidance

Code Quality & Maintenance:
- Remove deprecated IMPLEMENTATION_SUMMARY.md
- Clean up UnifiedServerFactory (remove unused buildDefault_Config)
- Improve configuration validation and error handling
- Update logging format from bullet points to asterisks
- Enhanced CMake imported library configurations

Breaking Changes:
- Config file must now exist (no auto-generation)
- Default mode changed to development when config.yaml exists
- Removed deprecated server factory methods

Files Added:
- docs/MCP_INTEGRATION.md
- examples/mcp_integration_example.cpp
- include/agent/services/mcp_agent_adapter.hpp
- include/server/mcp_server_integration.hpp
- src/agent/services/mcp_agent_adapter.cpp
- src/server/mcp_server_integration.cpp

This release establishes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,21 @@
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.14...4.0)
+
+# Force set policy version to avoid CMake 4.0 compatibility issues
+set(CMAKE_POLICY_VERSION_MINIMUM 3.14)
+set(CMAKE_POLICY_DEFAULT_CMP0048 NEW)
+set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
+set(CMAKE_POLICY_DEFAULT_CMP0074 NEW)
+
+# Set policy defaults for CMake 4.0 compatibility
+if(POLICY CMP0091)
+    cmake_policy(SET CMP0091 NEW)
+endif()
+if(POLICY CMP0077)
+    cmake_policy(SET CMP0077 NEW)
+endif()
+if(POLICY CMP0074)
+    cmake_policy(SET CMP0074 NEW)
+endif()
 
 # Project configuration
 project(KolosalAgent 
@@ -48,6 +65,7 @@ option(ENABLE_CUDA "Enable CUDA support for GPU acceleration" OFF)
 option(ENABLE_VULKAN "Enable Vulkan support" OFF)
 option(ENABLE_METAL "Enable Metal support (macOS)" OFF)
 option(ENABLE_NATIVE_OPTS "Enable native CPU optimizations" OFF)
+option(MCP_PROTOCOL_ENABLED "Enable Model Context Protocol integration" ON)
 
 # Development options
 option(ENABLE_ASAN "Enable AddressSanitizer" OFF)
@@ -138,6 +156,27 @@ endif()
 
 if(NOT nlohmann_json_FOUND)
     include_directories(${EXTERNAL_DIR}/nlohmann)
+endif()
+
+# mcp-cpp integration
+if(FALSE AND MCP_PROTOCOL_ENABLED AND EXISTS "${EXTERNAL_DIR}/mcp-cpp/CMakeLists.txt")
+    message(STATUS "Using mcp-cpp from external directory for MCP protocol support")
+    set(MCP_BUILD_TESTS OFF CACHE BOOL "disable mcp tests")
+    set(MCP_BUILD_EXAMPLES OFF CACHE BOOL "disable mcp examples")
+    set(MCP_BUILD_DOCS OFF CACHE BOOL "disable mcp docs")
+    set(MCP_USE_LIBCURL OFF CACHE BOOL "disable libcurl for mcp temporarily")
+    set(MCP_USE_SYSTEM_DEPS ${USE_SYSTEM_LIBS} CACHE BOOL "use system deps for mcp")
+    add_subdirectory(${EXTERNAL_DIR}/mcp-cpp EXCLUDE_FROM_ALL)
+    set(MCP_CPP_AVAILABLE TRUE)
+    set(MCP_CPP_LIBRARIES mcp)
+elseif(MCP_PROTOCOL_ENABLED)
+    message(WARNING "mcp-cpp not found in external directory - MCP protocol support disabled")
+    set(MCP_CPP_AVAILABLE FALSE)
+    set(MCP_CPP_LIBRARIES "")
+else()
+    message(STATUS "MCP protocol support disabled by user option")
+    set(MCP_CPP_AVAILABLE FALSE)
+    set(MCP_CPP_LIBRARIES "")
 endif()
 
 # yaml-cpp (prioritize main external for this project; kolosal-server builds its own in an isolated external build)
@@ -307,6 +346,7 @@ set(AGENT_SERVICES_SOURCES
     src/agent/services/agent_service.cpp
     src/agent/services/document_agent_service.cpp
     src/agent/services/workflow_agent_service.cpp
+    src/agent/services/mcp_agent_adapter.cpp
 )
 
 set(API_SOURCES
@@ -337,6 +377,7 @@ set(LOGGER_SOURCES
 set(SERVER_SOURCES
     src/server/server_client_interface.cpp
     src/server/unified_server.cpp
+    src/server/mcp_server_integration.cpp
 )
 
 set(TOOLS_SOURCES
@@ -398,6 +439,7 @@ target_include_directories(kolosal_agent
         ${CMAKE_CURRENT_SOURCE_DIR}/kolosal-server/external/nlohmann
         ${CMAKE_CURRENT_SOURCE_DIR}/external/nlohmann
         ${CMAKE_CURRENT_SOURCE_DIR}/external/yaml-cpp/include
+        ${CMAKE_CURRENT_SOURCE_DIR}/external/mcp-cpp/include
 )
 
 # Preprocessor definitions
@@ -431,6 +473,14 @@ if(ENABLE_HEALTH_MONITORING)
     target_compile_definitions(kolosal_agent PRIVATE ENABLE_HEALTH_MONITORING)
 endif()
 
+# MCP protocol support
+if(MCP_CPP_AVAILABLE)
+    target_compile_definitions(kolosal_agent PRIVATE MCP_PROTOCOL_ENABLED)
+    message(STATUS "MCP protocol support enabled")
+else()
+    message(STATUS "MCP protocol support disabled")
+endif()
+
 # Link libraries
 target_link_libraries(kolosal_agent
     PUBLIC
@@ -442,6 +492,7 @@ target_link_libraries(kolosal_agent
         minizip_static
         zlib_static
         yaml_cpp_server
+        ${MCP_CPP_LIBRARIES}
 )
 
 # Add PoDoFo libraries conditionally
@@ -553,39 +604,51 @@ if(WIN32)
     add_library(kolosal_server STATIC IMPORTED)
     # Import library (.lib) for static linking
     set_target_properties(kolosal_server PROPERTIES
-        IMPORTED_LOCATION_DEBUG   "${KOLOSAL_SERVER_BINARY_DIR}/Debug/kolosal_server.lib"
-        IMPORTED_LOCATION_RELEASE "${KOLOSAL_SERVER_BINARY_DIR}/Release/kolosal_server.lib"
+        IMPORTED_LOCATION_DEBUG         "${KOLOSAL_SERVER_BINARY_DIR}/Debug/kolosal_server.lib"
+        IMPORTED_LOCATION_RELEASE       "${KOLOSAL_SERVER_BINARY_DIR}/Release/kolosal_server.lib"
+        IMPORTED_LOCATION_RELWITHDEBINFO "${KOLOSAL_SERVER_BINARY_DIR}/Release/kolosal_server.lib"
+        IMPORTED_LOCATION_MINSIZEREL     "${KOLOSAL_SERVER_BINARY_DIR}/Release/kolosal_server.lib"
     )
     
     # Import kolosal-server dependencies (static libraries)
     add_library(podofo_static STATIC IMPORTED)
     set_target_properties(podofo_static PROPERTIES
-        IMPORTED_LOCATION_DEBUG   "${KOLOSAL_SERVER_BINARY_DIR}/external/podofo/src/podofo/Debug/podofo.lib"
-        IMPORTED_LOCATION_RELEASE "${KOLOSAL_SERVER_BINARY_DIR}/external/podofo/src/podofo/Release/podofo.lib"
+        IMPORTED_LOCATION_DEBUG         "${KOLOSAL_SERVER_BINARY_DIR}/external/podofo/src/podofo/Debug/podofo.lib"
+        IMPORTED_LOCATION_RELEASE       "${KOLOSAL_SERVER_BINARY_DIR}/external/podofo/src/podofo/Release/podofo.lib"
+        IMPORTED_LOCATION_RELWITHDEBINFO "${KOLOSAL_SERVER_BINARY_DIR}/external/podofo/src/podofo/Release/podofo.lib"
+        IMPORTED_LOCATION_MINSIZEREL     "${KOLOSAL_SERVER_BINARY_DIR}/external/podofo/src/podofo/Release/podofo.lib"
     )
     
     add_library(pugixml_static STATIC IMPORTED)
     set_target_properties(pugixml_static PROPERTIES
-        IMPORTED_LOCATION_DEBUG   "${KOLOSAL_SERVER_BINARY_DIR}/external/pugixml/Debug/pugixml.lib"
-        IMPORTED_LOCATION_RELEASE "${KOLOSAL_SERVER_BINARY_DIR}/external/pugixml/Release/pugixml.lib"
+        IMPORTED_LOCATION_DEBUG         "${KOLOSAL_SERVER_BINARY_DIR}/external/pugixml/Debug/pugixml.lib"
+        IMPORTED_LOCATION_RELEASE       "${KOLOSAL_SERVER_BINARY_DIR}/external/pugixml/Release/pugixml.lib"
+        IMPORTED_LOCATION_RELWITHDEBINFO "${KOLOSAL_SERVER_BINARY_DIR}/external/pugixml/Release/pugixml.lib"
+        IMPORTED_LOCATION_MINSIZEREL     "${KOLOSAL_SERVER_BINARY_DIR}/external/pugixml/Release/pugixml.lib"
     )
     
     add_library(minizip_static STATIC IMPORTED)
     set_target_properties(minizip_static PROPERTIES
-        IMPORTED_LOCATION_DEBUG   "${KOLOSAL_SERVER_BINARY_DIR}/Debug/minizip.lib"
-        IMPORTED_LOCATION_RELEASE "${KOLOSAL_SERVER_BINARY_DIR}/Release/minizip.lib"
+        IMPORTED_LOCATION_DEBUG         "${KOLOSAL_SERVER_BINARY_DIR}/Debug/minizip.lib"
+        IMPORTED_LOCATION_RELEASE       "${KOLOSAL_SERVER_BINARY_DIR}/Release/minizip.lib"
+        IMPORTED_LOCATION_RELWITHDEBINFO "${KOLOSAL_SERVER_BINARY_DIR}/Release/minizip.lib"
+        IMPORTED_LOCATION_MINSIZEREL     "${KOLOSAL_SERVER_BINARY_DIR}/Release/minizip.lib"
     )
     
     add_library(zlib_static STATIC IMPORTED)
     set_target_properties(zlib_static PROPERTIES
-        IMPORTED_LOCATION_DEBUG   "${KOLOSAL_SERVER_BINARY_DIR}/external/zlib/Debug/zsd.lib"
-        IMPORTED_LOCATION_RELEASE "${KOLOSAL_SERVER_BINARY_DIR}/external/zlib/Release/zsd.lib"
+        IMPORTED_LOCATION_DEBUG         "${KOLOSAL_SERVER_BINARY_DIR}/external/zlib/Debug/zsd.lib"
+        IMPORTED_LOCATION_RELEASE       "${KOLOSAL_SERVER_BINARY_DIR}/external/zlib/Release/zsd.lib"
+        IMPORTED_LOCATION_RELWITHDEBINFO "${KOLOSAL_SERVER_BINARY_DIR}/external/zlib/Release/zsd.lib"
+        IMPORTED_LOCATION_MINSIZEREL     "${KOLOSAL_SERVER_BINARY_DIR}/external/zlib/Release/zsd.lib"
     )
     
     add_library(llama_cpu STATIC IMPORTED)
     set_target_properties(llama_cpu PROPERTIES
-        IMPORTED_LOCATION_DEBUG   "${KOLOSAL_SERVER_BINARY_DIR}/lib/Debug/llama-cpu.lib"
-        IMPORTED_LOCATION_RELEASE "${KOLOSAL_SERVER_BINARY_DIR}/lib/Release/llama-cpu.lib"
+        IMPORTED_LOCATION_DEBUG         "${KOLOSAL_SERVER_BINARY_DIR}/lib/Debug/llama-cpu.lib"
+        IMPORTED_LOCATION_RELEASE       "${KOLOSAL_SERVER_BINARY_DIR}/lib/Release/llama-cpu.lib"
+        IMPORTED_LOCATION_RELWITHDEBINFO "${KOLOSAL_SERVER_BINARY_DIR}/lib/Release/llama-cpu.lib"
+        IMPORTED_LOCATION_MINSIZEREL     "${KOLOSAL_SERVER_BINARY_DIR}/lib/Release/llama-cpu.lib"
     )
     
     add_library(podofo_3rd STATIC IMPORTED)
@@ -603,20 +666,26 @@ if(WIN32)
     
     add_library(yaml_cpp_server STATIC IMPORTED)
     set_target_properties(yaml_cpp_server PROPERTIES
-        IMPORTED_LOCATION_DEBUG   "${KOLOSAL_SERVER_BINARY_DIR}/external/yaml-cpp/Debug/yaml-cppd.lib"
-        IMPORTED_LOCATION_RELEASE "${KOLOSAL_SERVER_BINARY_DIR}/external/yaml-cpp/Release/yaml-cpp.lib"
+        IMPORTED_LOCATION_DEBUG         "${KOLOSAL_SERVER_BINARY_DIR}/external/yaml-cpp/Debug/yaml-cppd.lib"
+        IMPORTED_LOCATION_RELEASE       "${KOLOSAL_SERVER_BINARY_DIR}/external/yaml-cpp/Release/yaml-cpp.lib"
+        IMPORTED_LOCATION_RELWITHDEBINFO "${KOLOSAL_SERVER_BINARY_DIR}/external/yaml-cpp/Release/yaml-cpp.lib"
+        IMPORTED_LOCATION_MINSIZEREL     "${KOLOSAL_SERVER_BINARY_DIR}/external/yaml-cpp/Release/yaml-cpp.lib"
     )
 else()
     add_library(kolosal_server STATIC IMPORTED)
     if(APPLE)
         set_target_properties(kolosal_server PROPERTIES
-            IMPORTED_LOCATION_DEBUG   "${KOLOSAL_SERVER_BINARY_DIR}/Debug/libkolosal_server.a"
-            IMPORTED_LOCATION_RELEASE "${KOLOSAL_SERVER_BINARY_DIR}/Release/libkolosal_server.a"
+            IMPORTED_LOCATION_DEBUG         "${KOLOSAL_SERVER_BINARY_DIR}/Debug/libkolosal_server.a"
+            IMPORTED_LOCATION_RELEASE       "${KOLOSAL_SERVER_BINARY_DIR}/Release/libkolosal_server.a"
+            IMPORTED_LOCATION_RELWITHDEBINFO "${KOLOSAL_SERVER_BINARY_DIR}/Release/libkolosal_server.a"
+            IMPORTED_LOCATION_MINSIZEREL     "${KOLOSAL_SERVER_BINARY_DIR}/Release/libkolosal_server.a"
         )
     else()
         set_target_properties(kolosal_server PROPERTIES
-            IMPORTED_LOCATION_DEBUG   "${KOLOSAL_SERVER_BINARY_DIR}/Debug/libkolosal_server.a"
-            IMPORTED_LOCATION_RELEASE "${KOLOSAL_SERVER_BINARY_DIR}/Release/libkolosal_server.a"
+            IMPORTED_LOCATION_DEBUG         "${KOLOSAL_SERVER_BINARY_DIR}/Debug/libkolosal_server.a"
+            IMPORTED_LOCATION_RELEASE       "${KOLOSAL_SERVER_BINARY_DIR}/Release/libkolosal_server.a"
+            IMPORTED_LOCATION_RELWITHDEBINFO "${KOLOSAL_SERVER_BINARY_DIR}/Release/libkolosal_server.a"
+            IMPORTED_LOCATION_MINSIZEREL     "${KOLOSAL_SERVER_BINARY_DIR}/Release/libkolosal_server.a"
         )
     endif()
     
@@ -624,13 +693,17 @@ else()
     add_library(podofo_static STATIC IMPORTED)
     if(APPLE)
         set_target_properties(podofo_static PROPERTIES
-            IMPORTED_LOCATION_DEBUG   "${KOLOSAL_SERVER_BINARY_DIR}/external/podofo/src/podofo/Debug/libpodofo.a"
-            IMPORTED_LOCATION_RELEASE "${KOLOSAL_SERVER_BINARY_DIR}/external/podofo/src/podofo/Release/libpodofo.a"
+            IMPORTED_LOCATION_DEBUG         "${KOLOSAL_SERVER_BINARY_DIR}/external/podofo/src/podofo/Debug/libpodofo.a"
+            IMPORTED_LOCATION_RELEASE       "${KOLOSAL_SERVER_BINARY_DIR}/external/podofo/src/podofo/Release/libpodofo.a"
+            IMPORTED_LOCATION_RELWITHDEBINFO "${KOLOSAL_SERVER_BINARY_DIR}/external/podofo/src/podofo/Release/libpodofo.a"
+            IMPORTED_LOCATION_MINSIZEREL     "${KOLOSAL_SERVER_BINARY_DIR}/external/podofo/src/podofo/Release/libpodofo.a"
         )
     else()
         set_target_properties(podofo_static PROPERTIES
-            IMPORTED_LOCATION_DEBUG   "${KOLOSAL_SERVER_BINARY_DIR}/external/podofo/src/podofo/Debug/libpodofo.a"
-            IMPORTED_LOCATION_RELEASE "${KOLOSAL_SERVER_BINARY_DIR}/external/podofo/src/podofo/Release/libpodofo.a"
+            IMPORTED_LOCATION_DEBUG         "${KOLOSAL_SERVER_BINARY_DIR}/external/podofo/src/podofo/Debug/libpodofo.a"
+            IMPORTED_LOCATION_RELEASE       "${KOLOSAL_SERVER_BINARY_DIR}/external/podofo/src/podofo/Release/libpodofo.a"
+            IMPORTED_LOCATION_RELWITHDEBINFO "${KOLOSAL_SERVER_BINARY_DIR}/external/podofo/src/podofo/Release/libpodofo.a"
+            IMPORTED_LOCATION_MINSIZEREL     "${KOLOSAL_SERVER_BINARY_DIR}/external/podofo/src/podofo/Release/libpodofo.a"
         )
     endif()
     
